--- a/giocodell'oca.html
+++ b/giocodell'oca.html
@@ -152,7 +152,7 @@
     </div>
 
     <div class="dado" style="display: none;">
-        <img id="immagine-dado" src="" alt="Dado">
+        <img id="immagine-dado" src="" >
     </div>
     
     <div id="myModal" class="modal">
@@ -185,7 +185,7 @@
                 // Genera il tabellone di gioco
                 generaTabellone();
                 // Rende visibile il contenitore del tabellone
-                document.querySelector('.tabellone-container').classList.add('visibile');
+                document.querySelector('.tabellone-container').style.visibility = 'visible';
                 // Mostra il pulsante per il turno del prossimo giocatore
                 document.getElementById('bottone-giocatore').style.display = 'block';
                 // Inizializza la posizione di ciascun giocatore a 0
@@ -238,9 +238,7 @@
 
             // Aggiorna l'immagine del dado
             immagineDado.src = "dado" + dado + ".png"; // Imposta il percorso dell'immagine del dado
-            immagineDado.alt = "Dado che mostra " + dado; // Imposta l'attributo 'alt' dell'immagine del dado
-
-
+            
             var avanzamento = dado; // Imposta l'avanzamento del giocatore in base al risultato del dado
             posizioneGiocatori[giocatoreCorrente] += avanzamento; // Aggiorna la posizione del giocatore corrente
 
